# warpgrid

./: .gitignore  Cargo.toml  README.md  beads-to-github-mapping.json  warpgrid-sdk-plan.md  wasm-orchestrator-plan.md
.beads/: issues.jsonl
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
.tervezo/: IMPLEMENTATION_PLAN.md
compat-db/: componentize-js-baseline.json  componentize-js-compat-table.md  componentize-js-warpgrid.json  tinygo-drivers.json  tinygo-pgx.json  tinygo-stdlib-compat-table.md  tinygo-stdlib.json
crates/warp-analyzer/: Cargo.toml
crates/warp-analyzer/src/: lib.rs  report.rs
crates/warp-analyzer/src/analyzers/: bun.rs  dockerfile.rs  go.rs  mod.rs  rust.rs  typescript.rs
crates/warp-analyzer/src/db/: mod.rs
crates/warp-analyzer/tests/: bun_integration.rs
crates/warp-cli/: Cargo.toml
crates/warp-cli/src/: main.rs
crates/warp-cli/src/commands/: convert.rs  dev.rs  init.rs  mod.rs  pack.rs
crates/warp-cli/src/templates/: async_go.rs  async_rust.rs  async_ts.rs  mod.rs
crates/warp-core/: Cargo.toml
crates/warp-core/src/: config.rs  lib.rs  source.rs  types.rs
crates/warp-pack/: Cargo.toml
crates/warp-pack/src/: bun.rs  go.rs  js.rs  lib.rs
crates/warp-runtime/: Cargo.toml
crates/warp-runtime/src/: instance.rs  lib.rs  limiter.rs  pool.rs
crates/warpd/: Cargo.toml
crates/warpd/src/: agent_mode.rs  control_plane.rs  main.rs
crates/warpd/tests/: cluster_integration.rs  standalone_regression.rs
crates/warpgrid-api/: Cargo.toml
crates/warpgrid-api/src/: handlers.rs  lib.rs  rollout_handlers.rs
crates/warpgrid-async/: Cargo.toml
crates/warpgrid-async/src/: body.rs  convert.rs  error.rs  header.rs  lib.rs  request.rs  response.rs
crates/warpgrid-async/tests/: streaming.rs
crates/warpgrid-autoscale/: Cargo.toml
crates/warpgrid-autoscale/src/: lib.rs  scaler.rs
crates/warpgrid-bun/: Cargo.toml
crates/warpgrid-bun/src/: lib.rs
crates/warpgrid-cluster/: Cargo.toml
crates/warpgrid-cluster/proto/: cluster.proto
crates/warpgrid-cluster/src/: agent.rs  lib.rs  membership.rs  server.rs  tls.rs
crates/warpgrid-dashboard/: Cargo.toml
crates/warpgrid-dashboard/src/: actions.rs  lib.rs  pages.rs  partials.rs  views.rs
crates/warpgrid-dashboard/templates/: base.html  density_demo.html  deployment_detail.html  deployments.html  node_detail.html  nodes.html  overview.html  rollouts.html
crates/warpgrid-dashboard/templates/_partials/: density_stats.html  deployment_rows.html  instance_table.html  node_cards.html  rollout_cards.html  stats.html
crates/warpgrid-health/: Cargo.toml
crates/warpgrid-health/src/: checker.rs  lib.rs  monitor.rs
crates/warpgrid-host/: Cargo.toml
crates/warpgrid-host/src/: bindings.rs  config.rs  db_proxy.rs  dns.rs  engine.rs  filesystem.rs  lib.rs  signals.rs  threading.rs  tzdata.rs
crates/warpgrid-host/src/db_proxy/: async_io.rs  host.rs  mysql.rs  redis.rs  tcp.rs
crates/warpgrid-host/src/dns/: cache.rs  host.rs
crates/warpgrid-host/src/filesystem/: host.rs
crates/warpgrid-host/src/signals/: host.rs
crates/warpgrid-host/src/threading/: host.rs  mod.rs
crates/warpgrid-host/tests/: integration_async_handler.rs  integration_async_templates.rs  integration_db_proxy.rs  integration_dns.rs  integration_fs.rs  integration_go_dns_dial.rs  integration_go_http_postgres.rs  integration_go_http_roundtrip.rs  integration_multi_service.rs  integration_mysql.rs  integration_postgres_proxy.rs  integration_redis.rs  integration_rust_async_handler.rs  integration_rust_http_postgres.rs  integration_rust_http_redis_postgres.rs  integration_shimconfig.rs  integration_signals.rs  integration_t3_go_http_postgres.rs  integration_t4_ts_http_postgres.rs  integration_t5_bun_http_postgres.rs  integration_threading.rs  integration_wasm_mysql_redis.rs
crates/warpgrid-host/wit/: async-handler.wit  filesystem.wit  http-types.wit  world.wit
crates/warpgrid-metrics/: Cargo.toml
crates/warpgrid-metrics/src/: collector.rs  lib.rs  prometheus.rs
crates/warpgrid-placement/: Cargo.toml
crates/warpgrid-placement/src/: convert.rs  lib.rs  placer.rs  scorer.rs
crates/warpgrid-proxy/: Cargo.toml
crates/warpgrid-proxy/src/: dns.rs  lib.rs  router.rs  sync.rs  tls.rs
crates/warpgrid-raft/: Cargo.toml
crates/warpgrid-raft/proto/: raft.proto
crates/warpgrid-raft/src/: lib.rs  log_store.rs  network.rs  node_map.rs  server.rs  state_machine.rs  typ.rs
crates/warpgrid-rollout/: Cargo.toml
crates/warpgrid-rollout/src/: controller.rs  lib.rs  strategy.rs
crates/warpgrid-scheduler/: Cargo.toml
crates/warpgrid-scheduler/src/: error.rs  lib.rs  load_balancer.rs  placement_executor.rs  scheduler.rs
crates/warpgrid-state/: Cargo.toml
crates/warpgrid-state/src/: error.rs  lib.rs  store.rs  tables.rs  types.rs
crates/warpgrid-trigger/: Cargo.toml
crates/warpgrid-trigger/src/: convert.rs  handler.rs  lib.rs
demos/wastebin/: Cargo.toml  build.sh  warpgrid.toml
demos/wastebin/migrations/: 0001_create_pastes.sql
demos/wastebin/src/: lib.rs  main.rs  paste.rs  router.rs  storage.rs  templates.rs
demos/wastebin/wit/: world.wit
docs/: FORK-MAINTENANCE.md  warpgrid-density-savings.xlsx  warpgrid-openspec-v0.1.0.docx  warpgrid-openspec-v0.2.0.docx  wasi-03-api-surface.md
landing/: index.html
libc-patches/: 0001-dns-getaddrinfo-shim.patch  0001-dns-route-getaddrinfo-through-WarpGrid-DNS-shim.patch  0002-fs-route-fopen-open-through-WarpGrid-virtual-filesys.patch  0002-fs-virtual-open.patch  0003-socket-connect-proxy.patch  0003-socket-route-connect-through-WarpGrid-database-proxy.patch  0004-socket-route-send-recv-read-write-through-WarpGrid-d.patch  0004-socket-send-recv-proxy.patch  (+6 more)
test-apps/t1-rust-http-postgres/: Cargo.toml
test-apps/t1-rust-http-postgres/src/: main.rs
tests/fixtures/rust-async-handler/: Cargo.toml
tests/fixtures/rust-async-handler/src/: lib.rs
tests/fixtures/rust-async-handler/wit/: world.wit
tests/fixtures/t5-db-proxy-guest/: Cargo.toml
tests/fixtures/t5-db-proxy-guest/src/: lib.rs
tests/fixtures/t5-db-proxy-guest/wit/: test.wit
(+243 files in other folders)
