[workspace]
resolver = "2"
exclude = ["demos/wastebin"]
members = [
    "crates/warp-core",
    "crates/warp-analyzer",
    "crates/warp-pack",
    "crates/warp-compat",
    "crates/warp-runtime",
    "crates/warp-cli",
    "crates/warpgrid-host",
    "crates/warpgrid-state",
    "crates/warpgrid-trigger",
    "crates/warpgrid-scheduler",
    "crates/warpgrid-health",
    "crates/warpgrid-metrics",
    "crates/warpgrid-autoscale",
    "crates/warpgrid-dashboard",
    "crates/warpgrid-api",
    "crates/warpd",
    "crates/warpgrid-cluster",
    "crates/warpgrid-raft",
    "crates/warpgrid-placement",
    "crates/warpgrid-proxy",
    "crates/warpgrid-rollout",
    "crates/warpgrid-libpq",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
regex = "1"
semver = "1"

wasmtime = { version = "41", features = ["component-model", "async", "component-model-async"] }
wasmtime-wasi = { version = "41", features = ["p3"] }

# Internal crates
warp-core = { path = "crates/warp-core" }
warp-analyzer = { path = "crates/warp-analyzer" }
warp-pack = { path = "crates/warp-pack" }
warp-compat = { path = "crates/warp-compat" }
warp-runtime = { path = "crates/warp-runtime" }
warpgrid-host = { path = "crates/warpgrid-host" }
warpgrid-state = { path = "crates/warpgrid-state" }
warpgrid-libpq = { path = "crates/warpgrid-libpq" }
