[package]
name = "warp-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid compatibility analyzer — warp convert"

[dependencies]
warp-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
walkdir.workspace = true
tracing.workspace = true
