[package]
name = "warp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid CLI — warpctl"

[[bin]]
name = "warp"
path = "src/main.rs"

[dependencies]
warp-core.workspace = true
warp-analyzer.workspace = true
warp-pack.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
