[package]
name = "warp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid core types, config parsing, and source resolution"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true
semver.workspace = true
