[package]
name = "warpd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid daemon — the control plane binary"

[[bin]]
name = "warpd"
path = "src/main.rs"

[dependencies]
warp-core.workspace = true
warp-runtime = { path = "../warp-runtime" }
warpgrid-state = { path = "../warpgrid-state" }
warpgrid-scheduler = { path = "../warpgrid-scheduler" }
warpgrid-health = { path = "../warpgrid-health" }
warpgrid-metrics = { path = "../warpgrid-metrics" }
warpgrid-autoscale = { path = "../warpgrid-autoscale" }
warpgrid-api = { path = "../warpgrid-api" }
warpgrid-dashboard = { path = "../warpgrid-dashboard" }
warpgrid-cluster = { path = "../warpgrid-cluster" }
warpgrid-raft = { path = "../warpgrid-raft" }
warpgrid-proxy = { path = "../warpgrid-proxy" }
warpgrid-rollout = { path = "../warpgrid-rollout" }
libc = "0.2"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde_json.workspace = true
axum = "0.8"
tonic = "0.12"
redb = "3.1"
openraft = { version = "0.9", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.8", features = ["tokio"] }
warpgrid-placement = { path = "../warpgrid-placement" }
