[package]
name = "warpgrid-async"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid async handler types with streaming body support"

[dependencies]
bytes = "1"
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
