[package]
name = "warpgrid-bun"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid Bun WASI runtime — compilation pipeline and host-side support for Bun TypeScript workloads"

[dependencies]
warpgrid-host = { path = "../warpgrid-host" }
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
