[package]
name = "warpgrid-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid cluster — node agent, gRPC heartbeat, mTLS, and membership"

[dependencies]
warpgrid-state = { path = "../warpgrid-state" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic = "0.12"
prost = "0.13"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

[build-dependencies]
tonic-build = "0.12"
