[package]
name = "warpgrid-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid dashboard — SSR web UI for deployment management"

[dependencies]
warpgrid-state = { path = "../warpgrid-state" }
axum = "0.8"
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
