[package]
name = "warpgrid-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid dashboard — SSR web UI for deployment management"

[dependencies]
warpgrid-state = { path = "../warpgrid-state" }
warpgrid-rollout = { path = "../warpgrid-rollout" }
askama = "0.12"
axum = "0.8"
chrono = "0.4"
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
