[package]
name = "warpgrid-health"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid health checker — probes, self-healing, and instance lifecycle"

[dependencies]
warpgrid-state = { path = "../warpgrid-state" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
