[package]
name = "warpgrid-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid Wasmtime host function shims — filesystem, DNS, signals, database proxy, threading"

[dependencies]
warp-core.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tracing.workspace = true
anyhow.workspace = true
toml.workspace = true
getrandom = "0.2"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rcgen = "0.13"
