[package]
name = "warpgrid-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid service mesh — L4/L7 proxy, DNS resolution, TLS termination"

[dependencies]
warpgrid-state = { path = "../warpgrid-state" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
