[package]
name = "warpgrid-raft"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid Raft consensus — openraft + redb state machine"

[dependencies]
warpgrid-state = { path = "../warpgrid-state" }
redb = "3.1"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
tonic = "0.12"
