[package]
name = "warpgrid-rollout"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid rolling updates — batch rollout, canary, health gates"

[dependencies]
warpgrid-state = { path = "../warpgrid-state" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
