[package]
name = "warpgrid-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid scheduler — deployment scheduling, instance pool management, and load balancing"

[dependencies]
warp-core.workspace = true
warp-runtime = { path = "../warp-runtime" }
warpgrid-host = { path = "../warpgrid-host" }
warpgrid-state = { path = "../warpgrid-state" }
warpgrid-placement = { path = "../warpgrid-placement" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
