[package]
name = "warpgrid-state"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WarpGrid embedded state store backed by redb"

[dependencies]
warp-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
redb = "3"

[dev-dependencies]
tempfile = "3"
