[package]
name = "wastebin-demo"
version = "0.1.0"
edition = "2024"
description = "wastebin pastebin demo for WarpGrid density showcase"
publish = false

[dependencies]
warpgrid-libpq = { path = "../../crates/warpgrid-libpq" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ruzstd = "0.7"

[profile.release]
opt-level = "s"
lto = true
strip = true
