[package]
name = "t1-rust-http-postgres"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Prevent Cargo from treating this as part of the workspace.
[workspace]
